--- a/assets/css/port.css
+++ b/assets/css/port.css
@@ -6,11 +6,16 @@
 * URL: www.itsokayitsofficial.io
 */
 
+html,
+body {
+    height: 100%;
+}
+
+a,
 h1,
 h2,
 h3,
-h4,
- :hover {
+h4:hover {
     text-decoration: none !important;
 }
 
@@ -25,11 +30,29 @@ li {
 }
 
 
-/* Headwrap */
+/* Wraps */
 
 #headerwrap {
     background: no-repeat center top;
     background-color: #272727 !important;
+}
+
+#tools {
+    margin-left: -50px;
+    margin-top: 30px;
+}
+
+#buildwrap {
+    height: 100%;
+    width: 100%;
+    margin-top: 110px;
+    margin-bottom: 80px;
+}
+
+#buildwrap h1 {
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 
@@ -56,14 +79,6 @@ li {
 }
 
 
-/* #Tools */
-
-#tools {
-    margin-left: -50px;
-    margin-top: 30px;
-}
-
-
 /* Social  */
 
 .twitter {
@@ -87,19 +102,69 @@ tr:hover {
     opacity: .7;
 }
 
-.carousel,
-.item,
-.slide,
-.carousel-inner {
-    height: 100%;
+
+/* Carousel */
+
+.carousel-indicators {
+    overflow: hidden;
+    position: relative;
     width: 100%;
+    height: 85px;
+    line-height: 85px;
+    z-index: 0;
+    padding: 20px 0;
+    margin: -1% -50% -3%;
+    text-align: center;
+    list-style: '-';
+}
+
+.carousel-indicators>li {
+    display: inline-block;
+    padding: 0;
+    width: 10%;
+    height: 100%;
+    margin: 0 2%;
+    text-indent: unset;
+    cursor: pointer;
+    background-color: 0;
+    border: 0;
+    border-radius: 0;
+}
+
+.carousel-indicators>li.active {
+    padding: 0;
+    width: 10%;
+    height: 100%;
+    margin: 0 2%;
+}
+
+.carousel-indicators>li>h2 {
+    font-size: 2em;
+    margin: auto;
+    -webkit-transition: font-size .5s ease;
+    -moz-transition: font-size .5s ease;
+    -o-transition: font-size .5s ease;
+    transition: font-size .5s ease;
+}
+
+.carousel-indicators>li.active>h2 {
+    font-size: 3em;
+}
+
+.carousel,
+.slide,
+.carousel-inner,
+.item {
+    height: 100% !important;
 }
 
 .carousel-control.r {
-    right: 0;
-    left: auto;
+    height: 100%;
+    right: 100%;
+    left: 80%;
 }
 
 .carousel-control.l {
+    height: 100%;
     float: left;
 }
