--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -15,9 +15,9 @@ Base Styles
 
 body {
     text-align: center;
-    height: 100%;
     display: table;
-    width: 100%
+    width: 100%;
+    height: 100%;
 }
 
 .block {
@@ -33,8 +33,8 @@ Page Loader
 .loader {
     position: relative;
     display: inline-block;
-    height: 50px;
-    width: 50px;
+    height: 500px;
+    width: 500px;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -42,11 +42,11 @@ Page Loader
 .loader:after {
     content: "";
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 10%;
+    left: 10%;
     display: block;
-    height: 30px;
-    width: 30px;
+    height: 400px;
+    width: 400px;
     background: none repeat scroll 0 0 #fff;
     border-radius: 50%;
 }
@@ -68,27 +68,21 @@ Page Loader
 
 .anim {
     position: absolute;
-    left: 100%;
     top: 0;
     height: 100%;
     width: 100%;
     border-radius: 999px;
-    background: none repeat scroll 0 0 #508EC3;
-    transform-origin: 0 50% 0;
-    animation: loader-rotate-left 3s infinite;
-    animation-delay: 0s;
-    animation-duration: 3s;
-    animation-timing-function: linear;
-    -webkit-transform-origin: 0 50% 0;
-    -webkit-animation: loader-rotate-left 3s infinite;
-    -webkit-animation-delay: 0s;
-    -webkit-animation-duration: 3s;
-    -webkit-animation-timing-function: linear;
+    background: none repeat scroll 0 0 #003F7E;
 }
 
 .left .anim {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
+    left: 100%;
+    transform-origin: 0 50% 0;
+    animation: loader-rotate-left 3s linear 0s infinite;
+    -webkit-transform-origin: 0 50% 0;
+    -webkit-animation: loader-rotate-left 3s linear 0s 1;
 }
 
 .right .anim {
@@ -96,27 +90,17 @@ Page Loader
     border-top-right-radius: 0;
     left: -100%;
     transform-origin: 100% 50% 0;
-    animation-name: loader-rotate-right;
-    animation-delay: 0;
-    animation-delay: 1.5s;
+    animation: loader-rotate-right 3s linear 1.5s infinite;
     -webkit-transform-origin: 100% 50% 0;
-    -webkit-animation-name: loader-rotate-right;
-    -webkit-animation-delay: 0;
-    -webkit-animation-delay: 1.5s;
+    -webkit-animation: loader-rotate-right 3s linear 1.5s 1;
 }
 
 @keyframes loader-rotate-right {
     0% {
         transform: rotate(0deg)
     }
-    25% {
-        transform: rotate(180deg)
-    }
     50% {
-        transform: rotate(180deg)
-    }
-    75% {
-        transform: rotate(360deg)
+        transform: rotate(180)
     }
     100% {
         transform: rotate(360deg)
@@ -127,14 +111,8 @@ Page Loader
     0% {
         transform: rotate(0deg)
     }
-    25% {
-        transform: rotate(0deg)
-    }
     50% {
-        transform: rotate(180deg)
-    }
-    75% {
-        transform: rotate(180deg)
+        transform: rotate(180)
     }
     100% {
         transform: rotate(360deg)
@@ -145,17 +123,11 @@ Page Loader
     0% {
         -webkit-transform: rotate(0deg)
     }
-    25% {
-        -webkit-transform: rotate(180deg)
-    }
     50% {
-        -webkit-transform: rotate(180deg)
-    }
-    75% {
-        -webkit-transform: rotate(360deg)
+        transform: rotate(180)
     }
     100% {
-        -webkit-transform: rotate(360deg)
+        -webkit-transform: rotate(180deg)
     }
 }
 
@@ -163,16 +135,10 @@ Page Loader
     0% {
         -webkit-transform: rotate(0deg)
     }
-    25% {
-        -webkit-transform: rotate(0deg)
-    }
     50% {
-        -webkit-transform: rotate(180deg)
-    }
-    75% {
-        -webkit-transform: rotate(180deg)
+        transform: rotate(180)
     }
     100% {
-        -webkit-transform: rotate(360deg)
+        -webkit-transform: rotate(180deg)
     }
 }
