--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ p {
 
 section {
 	display: block;
-	height: 100%;
+	height: 100vh;
 	overflow: hidden;
 	padding-top: 20px;
 	width: 100%;
@@ -125,7 +125,9 @@ section {
 video {
 	height: auto;
 	margin-top: -20px;
+	position: absolute;
 	width: 100%;
+	z-index: -100;
 }
 
 
@@ -346,6 +348,10 @@ Classes
 /*==================
 IDs
 ==================*/
+
+#about {
+	height: 100vh;
+}
 
 #check {
 	fill: var(--main-blue);
